fix: add all declared methods to the reflection config